# dev-fu

./: ALL_FEATURES.md  README-Fu.md  README.md  README.ms-MY.md  checklist.sh  error at line 64 expected bracket.txt  flu.ps1  flu.sh  fu.ps1  fu.sh  fuv1.sh  install.sh  menu.db  menu.ps1  menu.sh  menuWSL.sh  modules.ps1  modules.sh  run.sh  test_flu.sh  test_spinner.sh  tui.ps1  tui.sh
.github/workflows/: release.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
flu-sh/: flu.ps1  flu.sh  menu.db  menu.ps1  menu.sh  modules.Tests.ps1  modules.ps1  modules.sh  test_flu.sh  tui.ps1  tui.sh  web.sh
fu-sh/: README-Fu.ms-MY.md  fu.ps1  fu.sh  test_fu_alpine_bash.sh
fust/: Cargo.toml  Cross.toml  README-fust.md  build.rs  menu.db
fust/.cargo/: config.toml
fust/src/: cli.rs  error.rs  execute.rs  fetch.rs  logo.rs  main.rs  menu.rs  metadata.rs  module_info.rs  navigation.rs  platform.rs  registry.rs
fust/src/tui/: input.rs  mod.rs  terminal.rs  theme.rs
fust/src/tui/widgets/: checklist.rs  menu.rs  mod.rs  radio.rs  select.rs  text_input.rs  yesno.rs
modules/: MANIFEST.sha256  README.md  configure_mouse_disable.sh  install_avahi.sh  install_btop.sh  install_bun.sh  install_curl.sh  install_docker.sh  install_ffmpeg.sh  install_fish.sh  install_go.sh  install_gsd.sh  install_gsd_all.sh  install_hermes_agent.sh  install_htop.sh  install_neovim.sh  install_node.sh  install_nvm_node.sh  install_openchamber.sh  install_opencode_gsd.sh  install_openjdk.sh  install_php_laravel.sh  install_python.sh  install_rust.sh  install_systemd_resolved.sh  install_tailscale.sh  install_vscode.sh  install_wget.sh  install_yarn.sh  install_zsh.sh  remove_avahi.sh  remove_bun.sh  remove_docker.sh  remove_eza.sh  remove_fancy_prompt_blue.sh  remove_go.sh  remove_nvm_node.sh  remove_opencode.sh  remove_php_laravel.sh  remove_python.sh  (+8 more)
(+234 files in other folders)
