[package]
name = "fust"
version = "0.1.0"
edition = "2021"
description = "Modular developer environment setup utility"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
crossterm = "0.28"
signal-hook = "0.3"
