[package]
name = "fust"
version = "0.1.0"
edition = "2021"
description = "Modular developer environment setup utility"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
crossterm = "0.28"
signal-hook = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
sha2 = "0.10"
hex = "0.4"

[profile.release]
opt-level = "s"     # Optimize for size
lto = true          # Link-time optimization
strip = true        # Strip debug symbols
panic = "abort"     # No unwind tables — eliminates libgcc_s dependency for static musl
codegen-units = 1   # Better optimization at cost of compile time
