[package]
name = "fust"
version = "3.0.0-alpha.6"
edition = "2021"
description = "Modular developer environment setup utility"
build = "build.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
crossterm = "0.28"
sha2 = "0.10"
hex = "0.4"

[target.'cfg(unix)'.dependencies]
signal-hook = "0.3"

[target.'cfg(unix)'.dependencies.reqwest]
version = "0.12"
default-features = false
features = ["blocking", "rustls-tls"]

[target.'cfg(windows)'.dependencies.reqwest]
version = "0.12"
default-features = false
features = ["blocking", "default-tls"]

[profile.release]
opt-level = "s"
lto = true
strip = true
panic = "abort"
codegen-units = 1
